--- a/views/home.ejs
+++ b/views/home.ejs
@@ -34,24 +34,24 @@
         <div class="heading-container">
             <span class="heading">About</span>
         </div> 
-        <p>I am a passionate Data Analyst with a knack for transforming raw data into actionable insights. With a strong foundation in MySQL, an advanced skillset in Power BI, and Microsoft Excel. I thrive on the challenge of making data not just understandable but also impactful.</p>
-        <p>My journey in the world of data analysis has been all about turning complex datasets into visually appealing and informative dashboards. I take pride in my ability to uncover hidden patterns, trends, and opportunities that drive informed decision-making. </p>    
+        <p>I am delighted to introduce myself, an accomplished technologist with a comprehensive skill set spanning HTML5, CSS, JavaScript, Node.js, MongoDB, MySQL, and Express.js. With a solid foundation in front-end and back-end development technologies and I brings a wealth of experience and innovation to the table.</p>
+        <p>With a proven track record of delivering high-quality solutions and a passion for staying abreast of emerging technologies, I poised to make significant contributions to any project or team focused on pushing the boundaries to extreme.</p>    
     </Section>
     <section id="achievement">
         <div class="heading-container">
             <span class="heading">Achievement</span>
             <ul>
-                <li>Earned 5-star golden badge in SQL in HackerRank</li>
-                <li>Solved 100+ queries across different coding platforms in SQL.</li>
-                <li>Top 20 ranking for a Machine Learning-based project on drug discovery in Atal Incubation Centre - Centre for Cellular and Molecular Biology</li>
-                <li>Secured a perfect score of 500/500 Adidas Codes’n’stripes May 2021</li>
-                <li>Top 30 ranking for a project on engineering a bio scaffold for osteoporosis in Maker Mela - Nationwide Project Showcase 2020.</li>
+                <li>Earned 4-star Silver badge in Java in HackerRank</li>
+                <li>Solved 100+ problems across different coding platforms in Java.</li>
+                <li>Completed a full stack development course from Coding Ninjas.</li>
+                <li>Contributed for a top 5 ranking project on "Respire air Quality of Delhi" conducted by Where-U-Elevate </li>
+                <li>Done open source contribution as a freelancer</li>
             </ul
         </div>
     </Section>
     <section id="info-section">
         <div id="info">
-            <p>Designed and optimized complex data models with relationships for 12+ complex related tables. Performed complex data joins and calculations in MySql. Calculated requirements of the clients with 97 percent accuracy in Power BI . Worked with dataset having 100000+ rows. Implemented security measures at the row level to limit data access based on user roles and permissions for 10+ users.</p>
+            <p>During my tenure at my previous company, I embarked on a journey of continuous learning, growth, and meaningful contribution which leads me by creating a perfect bond with my team as well as with clients like Kraft Heinz, Amazon, Nestle, Taulia, Walmart, Target etc. And all these qualities helped me to be more productive with a hint of efficiency.</p>
         </div>
     </section>
     <section id="experience">
