--- a/views/_header.ejs
+++ b/views/_header.ejs
@@ -7,7 +7,7 @@
         <a id="username" href="/"> <b>Ayusman Panda</b></a>
         <ul>
             <li><a class="nav-buttons" id="home" href="/">Home</a></li>
-            <li><a class="nav-buttons" id="project" href="/projects">Projects</a></li>
+            <!-- <li><a class="nav-buttons" id="project" href="/projects">Projects</a></li> -->
             <li><a class="nav-buttons" id="feedback" href="/feedback">Feedback</a></li>
         </ul>
     </nav>
